prevent sidebar panel to overlay NVH editor buttons, if there is enough space to collapse the editor

--- a/website/css/lexonomy.css
+++ b/website/css/lexonomy.css
@@ -627,7 +627,7 @@ table.striped thead tr{
 
 @media screen and (max-width: 1500px) {
    .container.wideContainer{
-      width: 95vw;
+      max-width: 95vw;
    }
 }
 
